# cryptopals_rust

./: .gitignore  README.md
ex1_1_hex_to_base64/src/: main.rs
ex1_3_single_byte_xor/: Cargo.toml
ex1_3_single_byte_xor/src/: main.rs
ex1_4_detect_single_byte_xor/src/: main.rs
ex1_5_repeating_key_xor/: Cargo.toml
ex1_5_repeating_key_xor/src/: main.rs
ex1_6_break_repeating_key_xor/: Cargo.toml
ex1_6_break_repeating_key_xor/src/: main.rs
ex1_8_detect_aes_ecb/src/: main.rs
ex_02_fixed_xor/: Cargo.toml
ex_02_fixed_xor/src/: main.rs
ex_04_detect_single_byte_xor/: Cargo.toml
ex_06_break_repeating_key_xor/src/: main.rs
ex_07_AES_ECB_openssl/: Cargo.toml
ex_09_pkcs7_padding/: Cargo.toml
ex_09_pkcs7_padding/src/: main.rs
ex_10_cbc_mode/src/: main.rs
ex_11_ecb_cbc_oracle/src/: main.rs
ex_12_ecb_byte_by_byte_simple/: Cargo.toml
ex_13_ecb_cut_and_paste/: hints.md
ex_14_byte_by_byte_hard/: Cargo.toml
ex_15_pkcs_padding_validation/: Cargo.toml
ex_15_pkcs_padding_validation/src/: main.rs
ex_16_cbc_bitflipping/: hints.md
ex_16_cbc_bitflipping/src/: main.rs
ex_17_cbc_padding_oracle/: Cargo.toml  hints.md
ex_17_cbc_padding_oracle/src/: main.rs
ex_18_ctr/: Cargo.toml
ex_18_ctr/src/: main.rs
ex_19_crack_ctr_substitutions/: Cargo.toml
ex_19_crack_ctr_substitutions/src/: main.rs
ex_20_crack_ctr_statistically/: Cargo.toml
ex_20_crack_ctr_statistically/src/: main.rs
ex_21_MT19937/: Cargo.toml
ex_21_MT19937/src/: main.rs
ex_22_break_mt19937_seed/: Cargo.toml
ex_22_break_mt19937_seed/src/: main.rs
ex_23_break_mt19937_seed/: Cargo.toml
ex_23_break_mt19937_seed/src/: main.rs
ex_23_clone_mt19937/: Cargo.toml
ex_23_clone_mt19937/src/: main.rs
ex_24_MT19937_stream_cipher/: Cargo.toml
ex_24_MT19937_stream_cipher/src/: main.rs
ex_25_break_aes_ctr/: Cargo.toml
ex_25_break_aes_ctr/src/: main.rs
ex_26_ctr_bit_flipping/: Cargo.toml
ex_26_ctr_bit_flipping/src/: main.rs
ex_27_cbc_key_as_iv/: Cargo.toml
ex_27_cbc_key_as_iv/src/: main.rs
ex_28_sha1/: Cargo.toml
ex_28_sha1/src/: main.rs
ex_29_break_sha1/: Cargo.toml
ex_29_break_sha1/src/: main.rs
ex_30_break_md4/: Cargo.toml
ex_30_break_md4/src/: main.rs
ex_31_hmac_sha1_timing_leak/: Cargo.toml
ex_31_hmac_sha1_timing_leak/src/: main.rs
ex_32_hmac_sha1_timing_leak_short/: Cargo.toml
ex_32_hmac_sha1_timing_leak_short/src/: main.rs
ex_33_diffie_hellman/: Cargo.toml
ex_33_diffie_hellman/src/: main.rs
ex_34_diffie_hellman_mitm/: Cargo.toml
ex_34_diffie_hellman_mitm/src/: main.rs
ex_35_dh_malicious_g/: Cargo.toml
ex_35_dh_malicious_g/src/: main.rs
ex_36_SRP/: Cargo.toml
ex_36_SRP/src/: main.rs
ex_37_break_SRP_zero_key/: Cargo.toml
ex_37_break_SRP_zero_key/src/: main.rs
ex_38_break_srp_dict/: Cargo.toml
ex_38_break_srp_dict/src/: client.rs  main.rs  messages.rs  mitm.rs  passwords.txt  server.rs  utils.rs
set_1/ex1_3_single_byte_xor/src/: main.rs
set_1/ex1_4_detect_single_byte_xor/src/: main.rs
set_1/ex1_7_AES_ECB_openssl/src/: main.rs
set_1/ex1_8_detect_aes_ecb/: Cargo.toml
set_2/ex_10_cbc_mode/: Cargo.toml  hints.md
set_2/ex_10_cbc_mode/src/: main.rs
set_2/ex_11_ecb_cbc_oracle/: Cargo.toml  hints.md
set_2/ex_11_ecb_cbc_oracle/src/: main.rs
set_2/ex_12_ecb_byte_by_byte_simple/src/: main.rs
set_2/ex_13_ecb_cut_and_paste/: Cargo.toml
set_2/ex_13_ecb_cut_and_paste/src/: main.rs
set_2/ex_14_byte_by_byte_hard/: hints.md
set_2/ex_16_cbc_bitflipping/: Cargo.toml
set_2/utils/: Cargo.toml
utils/: Cargo.toml
utils/src/: diffie_hellman.rs  encryption.rs  english_scoring.rs  hash_utils.rs  hmac.rs  lib.rs  md4.rs  mt19937.rs  repeating_xor_cracker.rs  sha1.rs
(+7 files in other folders)
