[package]
name = "ex_19_crack_ctr_substitutions"
version = "0.1.0"
authors = ["Guy Hershenbaum <hershi@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "*"
utils = {path = "../utils" }
data-encoding = "*"
rand = "0.7"
lazy_static = "*"
