[package]
name = "ex_34_diffie_hellman_mitm"
version = "0.1.0"
authors = ["Guy Hershenbaum <hershi@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils" }

[dependencies.num-bigint]
version = "0.2"
features = ["rand"]
