[package]
name = "ex_37_break_SRP_zero_key"
version = "0.1.0"
authors = ["Guy Hershenbaum <hershi@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils" }
sha2 = "*"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "*"

[dependencies.num-bigint]
version = "0.2"
features = ["rand"]
